*added screeningTotalDuration for calendar entry